# gridflow

./: .gitignore  BRAINSTORM.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_network_topology.py  003_sensitivity_results.py  004_weather_correction.py  005_annotations.py  006_batch_simulations.py
backend/app/: config.py  main.py
backend/app/core/: deps.py  logging.py  rate_limit.py  security.py
backend/app/models/: __init__.py  annotation.py  batch.py  branch.py  bus.py  component.py  database.py  load_allocation.py  load_profile.py  project.py  simulation.py  user.py  weather.py
backend/app/schemas/: advisor.py  annotation.py  auth.py  batch.py  bess_sizing.py  branch.py  bus.py  component.py  contingency.py  financing.py  load_allocation.py  network_generate.py  power_flow.py  project.py  simulation.py  weather.py
backend/app/services/: weather_service.py
backend/app/worker/: __init__.py  batch_task.py  sensitivity_task.py  tasks.py
backend/engine/: __init__.py
backend/engine/advisor/: bess_sizing.py  evaluator.py  sizing.py
backend/engine/battery/: __init__.py  battery_system.py  degradation.py  kibam.py  soc_tracker.py
backend/engine/data/: component_templates.json
backend/engine/dispatch/: __init__.py  combined.py  cycle_charging.py  load_following.py  optimal.py
backend/engine/economics/: __init__.py  fiji_presets.py  financing.py  metrics.py  scoring.py  (+1 more)
backend/tests/: conftest.py
(+150 files in other folders)
