[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gridflow-backend"
version = "0.1.0"
description = "GridFlow - Web-based power grid analysis platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "PyJWT>=2.10.0",
    "bcrypt>=4.0.0",
    "httpx>=0.28.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "highspy>=1.8.0",
    "python-multipart>=0.0.18",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "engine"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
